--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,6 +4,7 @@
     "com.unity.collab-proxy": "2.2.0",
     "com.unity.feature.2d": "2.0.0",
     "com.unity.ide.visualstudio": "2.0.21",
+    "com.unity.render-pipelines.universal": "14.0.9",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.ugui": "1.0.0",
     "com.unity.visualscripting": "1.9.1",
